fixing background gradient contrast

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .bad-weather {
-  background: linear-gradient(45deg, var(--secondary-dark), var(--primary-light));
+  background: linear-gradient(45deg, var(--secondary-dark), var(--primary-light) 150%);
 }
 
 
@@ -22,4 +22,9 @@ main {
   gap: 2.5rem;
   width: 100%;
   padding: 5%;
+}
+
+h2 {
+  font-size: 1.2rem;
+  margin-bottom: 1em;
 }
