--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,3 @@
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-h2 {
-  font-size: 1.2rem;
-  margin-bottom: 1em;
-}
